add buildver feature to bvd-get.pl

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ MYMETA.yml
 *.swn
 testcase/test_tools/
 testcase/bin/
+testcase/bvd_add/case_bvd_add_98/
+testcase/bvd_add/case_bvd_add_99/
+testcase/bvd_get/case_bvd_get_99/
