housekeeping bvd-merge

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ testcase/bin/
 testcase/bvd_add/case_bvd_add_98/
 testcase/bvd_add/case_bvd_add_99/
 testcase/bvd_get/case_bvd_get_99/
+testcase/bvd_merge/case_bvd_merge_99/
